@@ -9,6 +9,7 @@ New features:
 - 3513390 Enforce LD and subscription limits
 - 3527920 RI and http responsecodes
 - 3531210 Allow indication delivery timeout tuning
+- 3534659 Match SfcbLocal to sfcc update
 
 Bugs fixed:
 
